--- a/src/app/Components/nav/nav.component.html
+++ b/src/app/Components/nav/nav.component.html
@@ -59,7 +59,7 @@
         </a>
 
         <!-- Español -->
-        <a href="#" id="a_ES">
+        <a class="mb-16" href="#" id="a_ES">
           ES
         </a>
 
