responsive carrusel experiencia

--- a/src/app/Components/experiencia/experiencia.component.css
+++ b/src/app/Components/experiencia/experiencia.component.css
@@ -4,6 +4,7 @@
   background-attachment: fixed;
   position: relative;
   padding-bottom: 1rem;
+  height: 86rem;
 }
 
 .container-experiencia::before {
