--- a/src/app/Components/experiencia/experiencia.component.html
+++ b/src/app/Components/experiencia/experiencia.component.html
@@ -7,9 +7,9 @@
       <!-- Fila 1 del container carrusel -->
       <div class="row">
         <!-- Columa 1 de fila 1 -->
-        <div class="col-md-4">
+        <div class="col-xxl-4 col-xl-6">
           <!-- Carousel -->
-          <div id="ketanolab" class="carousel slide" data-bs-ride="carousel">
+          <div id="ketanolab" class="carousel slide justify-content-center" data-bs-ride="carousel">
             <!-- The slideshow/carousel -->
             <div class="carousel-inner">
               <!-- Capa Pc -->
@@ -30,7 +30,7 @@
           </div>
         </div>
         <!-- Inicio columna 2 de fila 1 carrusel -->
-        <div class="col-md-4">
+        <div class="col-xxl-4 col-xl-6">
           <!-- Carousel -->
           <div id="ketano" class="carousel slide" data-bs-ride="carousel">
             <!-- The slideshow/carousel -->
@@ -53,7 +53,7 @@
           </div>
         </div>
         <!-- Inicio columna 3 de fila 1 carrusel -->
-        <div class="col-md-4">
+        <div class="col-xxl-4 col-xl-6">
           <!-- Carousel -->
           <div id="ketano" class="carousel slide" data-bs-ride="carousel">
             <!-- The slideshow/carousel -->
@@ -137,13 +137,7 @@
           </a>
           </div>
         </div>
-        <!-- Inicio de logo 3 de aliados-->
-        <div class="marco-ext2 logo2 d-flex">
-          <div class="align-self-center">
-            <img src="../../../assets/img/lapazsw.svg" class="efecto"  alt="La Paz Weekend" id="imagenesaliados3">
-          </div>
-        </div>
-        <!-- Inicio de columna 4 de fila 1 -->
+        <!-- Inicio de logo 3 de aliados -->
         <div class="marco-ext2 logo2 d-flex">
           <div class="align-self-center">
             <img src="../../../assets/img/asoc4.jpg" class="efecto" alt="Illa" id="imagenesaliados4">
