--- a/src/app/Components/nav/nav.component.html
+++ b/src/app/Components/nav/nav.component.html
@@ -1,9 +1,9 @@
 <!-- Inicio Navbar que colapsa en hamburguesa en el pixel 1200 de width-->
-<nav class="navbar navbar-expand-xxl navbar-dark bg-ketanolab">
+<nav class="navbar navbar-expand-xl navbar-dark bg-ketanolab">
   <!-- Container -->
   <div class="container">
     <!-- Brand de Ketanolab vista en móviles -->
-      <a class="navbar-brand d-xxl-none" href="#">
+      <a class="navbar-brand d-xl-none" href="#">
         <img class="brand-mobile" src="../../assets/img/img/circulo-01.svg" alt="Ketanolab">
       </a>
       <!-- Botón sánduche en vista móvil -->
@@ -13,7 +13,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <!-- Navbar vista Pc -->
-          <a class="navbar-brand d-none d-xxl-block" href="#">
+          <a class="navbar-brand d-none d-xl-block" href="#">
               <img src="../../assets/img/img/circulo-01.svg" alt="Ketanolab">
           </a>
 
