Cambios de texto.

--- a/src/app/Components/nosotros/nosotros.component.html
+++ b/src/app/Components/nosotros/nosotros.component.html
@@ -46,7 +46,7 @@
           <img class="card-img" src="../../../assets/img/mile.jpg" alt="Milenka.">
           <div class="card-img-overlay">
             <h5 class="card-title">{{"we.person-3" | translate}}</h5>
-            <p class="card-text justificado"> {{"we.person-3_description" | translate}} </p>
+            <p class="card-text justificado milenka"> {{"we.person-3_description" | translate}} </p>
             <a href="https://www.linkedin.com/in/milenka-escobar-pereira-648a0942/" target="_blank" ></a>
           </div>
         </div>
