logo illa subido

--- a/src/app/Components/experiencia/experiencia.component.html
+++ b/src/app/Components/experiencia/experiencia.component.html
@@ -140,7 +140,7 @@
         <!-- Inicio de logo 3 de aliados -->
         <div class="marco-ext2 logo2 d-flex">
           <div class="align-self-center">
-            <img src="../../../assets/img/asoc4.jpg" class="efecto" alt="Illa" id="imagenesaliados4">
+            <img src="../../../assets/img/illa.png" class="efecto" alt="Illa" id="imagenesaliados4">
           </div>
         </div>
       </section>
