--- a/src/app/Components/experiencia/experiencia.component.css
+++ b/src/app/Components/experiencia/experiencia.component.css
@@ -290,3 +290,10 @@
   margin-top: -13.6rem;
   margin-left: -0.3rem;
 }
+
+@media (max-width:1399) {
+  
+  .container-experiencia {
+    height: 200vh;
+  }
+}
