--- a/src/app/Components/nav/nav.component.html
+++ b/src/app/Components/nav/nav.component.html
@@ -20,48 +20,48 @@
           <!-- Construcción con before y after de los botones del navbar -->
 
           <!-- Servicios -->
-
-            <div id="servicios">
+            <div id="serviciosposition">
+              <div id="servicios">
+              </div>
+              <a href="/inicio" id="a_servicios">
+                {{"nav.title-1" | translate}}
+              </a>
             </div>
-            <a href="/inicio" id="a_servicios">
-              {{"nav.title-1" | translate}}
+            <!-- Nosotros -->
+          <div id="nosotrosposition">
+            <div id="nosotros">
+            </div>
+            <a href="/nosotros" id="a_nosotros">
+              {{"nav.title-2" | translate}}
             </a>
-
-          <!-- Nosotros -->
-
-          <div id="nosotros">
           </div>
-          <a href="/nosotros" id="a_nosotros">
-            {{"nav.title-2" | translate}}
+            <!-- Nuestra Experiencia -->
+          <div id="experienciaposition">
+            <div id="experiencia">
+            </div>
+            <a href="/experiencia" id="a_experiencia">
+              {{"nav.title-3" | translate}}
+            </a>
+          </div>
+            <!-- Oficina Virtual -->
+          <div id="oficinaposition">
+            <div id="oficina">
+            </div>
+            <a href="https://gather.town/app/zmougmiMJ2HHVYbZ/ketanolab" id="a_oficina" target="_blank">
+              {{"nav.title-4" | translate}}
+            </a>
+          </div>
+          <!-- Enlaces de Español e Inglés. -->
+
+          <!-- Inglés -->
+          <a href="#" id="a_EN" (click)="setEn()">
+            EN
           </a>
 
-          <!-- Nuestra Experiencia -->
-
-          <div id="experiencia">
-          </div>
-          <a href="/experiencia" id="a_experiencia">
-            {{"nav.title-3" | translate}}
+          <!-- Español -->
+          <a class="mb-16" href="#" id="a_ES" (click)="setEs()">
+            ES
           </a>
-
-          <!-- Oficina Virtual -->
-
-          <div id="oficina">
-          </div>
-          <a href="https://gather.town/app/zmougmiMJ2HHVYbZ/ketanolab" id="a_oficina" target="_blank">
-            {{"nav.title-4" | translate}}
-          </a>
-
-        <!-- Enlaces de Español e Inglés. -->
-
-        <!-- Inglés -->
-        <a href="#" id="a_EN" (click)="setEn()">
-          EN
-        </a>
-
-        <!-- Español -->
-        <a class="mb-16" href="#" id="a_ES" (click)="setEs()">
-          ES
-        </a>
 
       </div>
     </div>
