--- a/src/app/Components/inicio/inicio.component.html
+++ b/src/app/Components/inicio/inicio.component.html
@@ -1,55 +1,62 @@
-<!-- Inicio container fluído -->
-    <div class="container-fluid container-inicio">
-        <app-nav></app-nav>
-        <!-- Inicio fila 1 -->
-        <div class="row">
-            <!-- Inicio columna 1 de la fila 1 -->
-            <div class="col-sm-12 col-md-6 color1">
-                <div class="img-container-estrategias">
-                    <img class="img-inicio" src="../../assets/img/principal/3.png" alt="">
+<div class="container-fluid container-inicio">
+    <app-nav></app-nav>
+
+    <div class="row">
+        <div class="col-xl-6 col-lg-12 espacio">
+            <div class="estrategias-mundo">
+                <div class="img-container-mundo">
+                    <img class="box-mundo" src="../../assets/img/principal/3.png" alt="">
                     <a class="centered">{{"beginning.title-7" | translate}}</a>
                 </div>
-                <!-- Inicio satélites de estrategias -->
-                <a href="/marketing"class="servicios-box-estrategia-1">{{"beginning.title-9" | translate}}</a>
-                <a href="/coaching"class="servicios-box-estrategia-2">{{"beginning.coaching-2" | translate}}</a>
-                <a href="/developers" class="servicios-box-estrategia-3">{{"beginning.title-3" | translate}}</a> 
-                <!-- Final satélites de estrategias -->
+
+                <a href="/marketing"class="box-servicios estrategias-1">{{"beginning.title-9" | translate}}</a>
+                <a href="/coaching"class="box-servicios estrategias-2">{{"beginning.coaching-2" | translate}}</a>
+                <a href="/developers" class="box-servicios estrategias-3">{{"beginning.title-3" | translate}}</a> 
             </div>
-            <!-- Inicio columna 2 de la fila 1 -->
-            <div class="col-sm-12 col-md-6 color2 p-5" >
-                <div class="img-container-blockchain">
-                    <img class="img-inicio" src="../../assets/img/principal/4.png" alt="">
+        </div>
+
+
+        <div class="col-xl-6 col-lg-12 espacio">
+            <div class="blockchain-mundo">
+                <div class="img-container-mundo">
+                    <img class="box-mundo" src="../../assets/img/principal/4.png" alt="">
                     <a class="centered">{{"beginning.title-10" | translate}}</a>
                 </div>
-                <!-- Inicio satélite de blockchain -->
-                <a class="servicios-box-blockchain-1" href="/dapps">{{"beginning.title-11" | translate}}</a>
-                <a class="servicios-box-blockchain-2" href="/blockchain">{{"beginning.title-14" | translate}}</a>    
-                <!-- Fin de satélite de blockchain -->
+                <a class="box-servicios blockchain-1" href="/dapps">{{"beginning.title-11" | translate}}</a>
+                <a class="box-servicios blockchain-2" href="/blockchain">{{"beginning.title-14" | translate}}</a>  
             </div>
         </div>
-        <!-- Inicio fila 2 -->
-        <div class="row">
-            <!-- Inicio columna 1 de fila 2 -->
-            <div class="col-sm-12 col-md-6 color3">
-                <div class="img-container-digitales">
-                    <img class="img-inicio" src="../../assets/img/principal/2.png" alt="">
+    </div>
+
+
+
+    <div class="row">
+        <div class="col-xl-6 col-lg-12 espacio">
+            <div class="digitales-mundo">
+                <div class="img-container-mundo">
+                    <img class="box-mundo" src="../../assets/img/principal/2.png" alt="">
                     <a class="centered">{{"beginning.title-1" | translate}}</a>
                 </div>
-                <!-- Inicio satélites de digitales -->
-                <a href="/services" class="servicios-box-digitales-1">{{"beginning.title-13" | translate}}</a>              
-                <a href="/apps"class="servicios-box-digitales-2">{{"beginning.title-4" | translate}}</a>
-                <a href="/commerce" class="servicios-box-digitales-3">{{"beginning.title-2" | translate}}</a>
-                <!-- FIn satélites de digitales -->
-            </div>
-            <!-- Inicio columa 2 de fila 2 -->
-            <div class="col-sm-12 col-md-6 color4">
-                <div class="img-container-metaverso">
-                    <img class="img-inicio" src="../../assets/img/principal/1.png" alt="">
-                    <a class="centered">{{"beginning.title-5" | translate}}</a>
-                </div>
-                <!-- Inicio satélites de metaverso -->
-                <a class="servicios-box-metaverso-1" href="/turismo">{{"beginning.coaching-1" | translate}}</a>
-                <a class="servicios-box-metaverso-2" href="/arte">{{"beginning.title-6" | translate}}</a>
-                <!-- Fin de satélites de metaverso -->
+                <a href="/services" class="box-servicios digitales-1">{{"beginning.title-13" | translate}}</a>              
+                <a href="/apps"class="box-servicios digitales-2">{{"beginning.title-4" | translate}}</a>
+                <a href="/commerce" class="box-servicios digitales-3">{{"beginning.title-2" | translate}}</a>
             </div>
         </div>
+
+
+        <div class="col-xl-6 col-lg-12 espacio">
+            <div class="metaverso-mundo">
+                <div class="img-container-mundo">
+                    <img class="box-mundo" src="../../assets/img/principal/1.png" alt="">
+                    <a class="centered">{{"beginning.title-5" | translate}}</a>
+                </div>
+                <a class="box-servicios metaverso-1" href="/turismo">{{"beginning.coaching-1" | translate}}</a>
+                <a class="box-servicios metaverso-2" href="/arte">{{"beginning.title-6" | translate}}</a>
+            </div>
+        </div>
+    </div>
+
+
+</div>
+
+<app-footer></app-footer>
