--- a/src/app/Components/marketing/marketing.component.html
+++ b/src/app/Components/marketing/marketing.component.html
@@ -8,14 +8,14 @@
             {{"marketing.title" | translate}}
         </h1>
         <div class="row">
-            <div class="col-md-4 mt-16">
+            <div class="col-lg-4 col-md-12 mt-16 px-5">
                 <article>
                     <p class="text-justify">
                         {{"marketing.paragraph.0" | translate}}
                     </p>
                 </article>
             </div>
-            <div class="col-md-4 mt-16">
+            <div class="col-lg-4 col-md-6 mt-16 px-5">
                 <article>
                     <ul class="align">
                         <li>
@@ -56,7 +56,7 @@
 
                 </article>
             </div>
-            <div class="col-md-4 mt-10">
+            <div class="col-lg-4 col-md-6 mt-10">
                 <article>
                     <img src="../../../assets/img/markexp.png" class="img1 pequeño mt-14" alt="marketing exponencial">
                 </article>
