--- a/src/app/Components/home/home.component.css
+++ b/src/app/Components/home/home.component.css
@@ -1,8 +1,3 @@
-a {
-    font-family: 'Orbitron';
-    color: #fff;
-}
-
 .fondo {
     background-image: url("../../../assets/img/Home/home.png");
     height: 100vh;
@@ -25,11 +20,7 @@ a {
     filter: brightness(50%);
 }
 
-/* Palabra ketanolab */
-.home-logo {
-    z-index: 1;
-    max-width: 800px;
-}
+
     
 /* Animación de sombra */
 @keyframes fadeIn {
@@ -81,6 +72,10 @@ animation: fadeIn 4s infinite linear;
     padding-right: 25px;
 }
 
+.home-btn {
+    margin: 0 auto;
+}
+
 /* Botón 64 */
 .button-64 {
   align-items: center;
@@ -103,8 +98,6 @@ animation: fadeIn 4s infinite linear;
   touch-action: manipulation;
   white-space: nowrap;
   cursor: pointer;
-  margin-left: 22rem;
-  margin-top: -2.5rem;
 }
 
 .button-64:active,
@@ -132,12 +125,16 @@ animation: fadeIn 4s infinite linear;
   }
 }
 
-#siguenos {
-    display: block;
+.siguenos {
     margin-top: 3rem;
-    margin-left: 5rem;
 }
 
 .azul:hover {
     color: #4ee6f1;
+}
+
+.home-logo {
+    margin: 2rem 0;
+    width: 500px;
+    resize: both;
 }
